# ALETHA

./: CMakeLists.txt  README.md  nrf52833dk_nrf52833.overlay  prj.conf
boards/ALETHA/ALETHA_V2/: ALETHA_V2-pinctrl.dtsi  ALETHA_V2.dts  ALETHA_V2.yml  ALETHA_V2_defconfig  Kconfig.ALETHA_V2  board.yml
src/: loadcell.c  loadcell.h  main.c
